fix: layout on mobile vert/horiz orientation

--- a/src/index.css
+++ b/src/index.css
@@ -45,12 +45,12 @@ body {
 
 .keyboard-group {
   position: fixed;
-  bottom: 8em;
+  bottom: 10vh;
   width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 4em;
+  gap: 5vh;
 }
 
 .keyboard {
